Allow sync to resume in local backend mode after it has been disabled.

If sync has been disabled manually or by policy it was not resuming
in local sync mode afterwards because there is no external event to
trigger that.

BUG=707181
TEST=components_unittests

Review-Url: https://codereview.chromium.org/2810943007
Cr-Commit-Position: refs/heads/master@{#466926}

Former-commit-id: f51a09272db6c06dcca92fa0e2c4811dc8d5e828